Source/WebCore/dom/Attr.cpp
@@ -29,6 +29,8 @@
 #include "ScopedEventQueue.h"
 #include "Text.h"
 #include "XMLNSNames.h"
+#include <wtf/text/AtomicString.h>
+#include <wtf/text/StringBuilder.h>
 
 namespace WebCore {
 
@@ -132,13 +134,8 @@ void Attr::setValue(const AtomicString& value)
 
 void Attr::setValue(const AtomicString& value, ExceptionCode&)
 {
-#if ENABLE(MUTATION_OBSERVERS)
     if (m_element)
-        m_element->enqueueAttributesMutationRecordIfRequested(m_attribute->name(), m_attribute->value());
-#endif
-
-    if (m_element && m_element->isIdAttributeName(m_attribute->name()))
-        m_element->updateId(m_element->getIdAttribute(), value);
+        m_element->willModifyAttribute(m_attribute->name(), m_attribute->value(), value);
 
     setValue(value);
 
@@ -175,27 +172,23 @@ void Attr::childrenChanged(bool changedByParser, Node* beforeChange, Node* after
     if (m_ignoreChildrenChanged > 0)
         return;
 
-#if ENABLE(MUTATION_OBSERVERS)
-    if (m_element)
-        m_element->enqueueAttributesMutationRecordIfRequested(m_attribute->name(), m_attribute->value());
-#endif
-
     Node::childrenChanged(changedByParser, beforeChange, afterChange, childCountDelta);
 
     invalidateNodeListsCacheAfterAttributeChanged(m_attribute->name());
 
     // FIXME: We should include entity references in the value
 
-    String val = "";
+    StringBuilder valueBuilder;
     for (Node *n = firstChild(); n; n = n->nextSibling()) {
         if (n->isTextNode())
-            val += static_cast<Text *>(n)->data();
+            valueBuilder.append(static_cast<Text*>(n)->data());
     }
 
-    if (m_element && m_element->isIdAttributeName(m_attribute->name()))
-        m_element->updateId(m_attribute->value(), val);
+    AtomicString newValue = valueBuilder.toString();
+    if (m_element)
+        m_element->willModifyAttribute(m_attribute->name(), m_attribute->value(), newValue);
 
-    m_attribute->setValue(val.impl());
+    m_attribute->setValue(newValue);
     if (m_element)
         m_element->attributeChanged(m_attribute.get());
 }
